# quantplay

./: .gitignore  README.md  quantplay.code-workspace  requirements.txt
app/: Doxyfile  algo.py  algomanager.py  apigetter.py  compose.yaml  csvconverter.py  databaseconnector.py  datagetter.py  daydata.py  dayrecorder.py  portfolio.py  readme.md  transaction.py
app/notebook/: Hello Jupyter.ipynb
app/testdata/: intraday_ibm_large.json  rtx_2023-09-18T19-23-0.json
app_cpp/: .gitignore  CMakeLists.txt  Doxyfile  compose.yaml  readme.md
app_cpp/app_cpp/: CMakeLists.txt  algo.cpp  algo.h  algo_manager.cpp  c_cpp_properties.json  daydata.cpp  daydata.h  daydata.test.cpp  dayrecorder.cpp  dayrecorder.h  main.cpp  order.h  portfolio.cpp  transaction.cpp  transaction.h  transaction.test.cpp
app_cpp/app_cpp/algo/: algo_controller.cpp  algo_controller.h  algo_controller_factory.cpp  algo_controller_factory.h  algo_controller_i.h  algo_data_retriever_i.h  algo_i.h  algo_types.h
app_cpp/app_cpp/algo/algo1/: algo.cpp  algo.h  algo1.cpp  algo1.h  algo1_controller.cpp  algo1_controller.h  algo1_data.h  algo1_data_retriever.cpp  algo1_data_retriever.h
app_cpp/app_cpp/algo/algo1/tests/: algo1.test.cpp  algo1_demo.test.cpp
app_cpp/app_cpp/algo/algo2/: algo2.cpp  algo2.h  algo2_controller.cpp  algo2_controller.h  algo2_data_retriever.cpp  algo2_data_retriever.h
app_cpp/app_cpp/algo/algo2/tests/: algo2.test.cpp  algo2_demo.test.cpp
app_cpp/app_cpp/algo_manager/: algo_manager.cpp  algo_manager.h
app_cpp/app_cpp/analyzer/: analysis.cpp  analysis.h  analyzer.cpp  analyzer.h  analyzer_db_handler.cpp  analyzer_db_handler.h
app_cpp/app_cpp/analyzer/tests/: analyzer.test.cpp
app_cpp/app_cpp/common/: db_handler_base.cpp  db_handler_base.h  helpers.cpp  helpers.h  ohlcv.cpp  ohlcv.h  time_base.cpp  time_base.h  transaction.cpp  transaction.h  typedefs.h
app_cpp/app_cpp/portfolio/: portfolio.cpp  portfolio.h
app_cpp/app_cpp/recorder/: daydata.cpp  daydata.h  dayrecorder.cpp  dayrecorder.h  recorder.cpp  recorder.h  recorder_db.cpp  recorder_db.h  recorder_db_handler.cpp  recorder_db_handler.h  snapshot.cpp  snapshot.h
app_cpp/app_cpp/recorder/tests/: dayrecorder.test.cpp  recorder.test.cpp
app_cpp/app_cpp/tests/: algo.test.cpp  algo1.test.cpp  daydata.test.cpp  dayrecorder.test.cpp  portfolio.test.cpp  transaction.test.cpp
app_cpp/app_cpp/trader/: trader.cpp  trader.h
app_cpp/datasets/: VOO_2015_to_2024-03-27.csv
app_cpp/grafana/: Dockerfile  grafana.ini
app_cpp/grafana/dashboards/: danny_sample.json
app_cpp/grafana/provisioning/dashboards/: dashboard.yml
app_cpp/grafana/provisioning/dashboards/algo1/: algo1.json
app_cpp/grafana/provisioning/dashboards/algo2/: algo2.json
app_cpp/grafana/provisioning/datasources/: datasource.yml
quantconnect/: EquitiesStaticTemplateAlgorithm.py
quantconnect/lesson1/: 1_set_starting_cash.py  2_set_date_range.py  3_manually_select_data.py  4_set_data_normalization_mode.py  5_checking_holdings.py  6_placing_orders.py
quantconnect/lesson2/: 1_stop_market_order.py  2_order_events.py  3_stoploss_hit.py  4_trailing_stop_loss.py  5_plot_stop_levels.py
quantconnect/lesson3/: 1_setting_up_allocation.py  2_using momentum_percentage_indicator.py  3_preparing_indicator_for_testing.py  4_using_signal_to_flip.py  5_time_maret_moves.py
quantitativetradingdemos/: 3_4_calculating_sharpe_ratios.py
quantitativetradingdemos/data/: 3_4_ige.csv  3_4_spy_data.csv
